@@ -1372,6 +1372,9 @@
             <optional>
                 <attribute name="target"/>
             </optional>
+            <optional>
+                <attribute name="reverse"/>
+            </optional>
         </group>
     </define>
 
