@@ -1,3 +1,7 @@
+2010-01-23 Ozan Çağlayan <ozan@pardus.org.tr>
+		* Add support for optional reverse="[tT]rue" in <Patch> for reverse applying
+		a patch.
+
 2010-01-22 Gökçen Eraslan <gokcen@pardus.org.tr>
 		* pisi/actionsapi/perlmodules.py: Do not ignore parameter in make
 		method (eg. perl Build test). Tests of some perl modules have never run
